2005-08-29  Graydon Hoare  <graydon@redhat.com>

	PR translator/1265
	* tapsets.cxx 
	(func_info::decl_file)
	(func_info::decl_line)
	(inline_instance_info::decl_file)
	(inline_instance_info::decl_line): New fields.
	(dwflpp::function_srcfile): Remove.
	(dwflpp::function_file): Add.
	(dwflpp::function_line): Add.
	(dwarf_derived_probe::dwarf_derived_probe): Update.
	(query_statement): Pass func, file, line through.
	(query_inline_instance_info): Likewise.
	(query_func_info): Likewise.
	(query_srcfile_line): Query statement lines if 
	statement_str exists, rather than *_info.
	(query_dwarf_inline_instance): Extract file and line.
	(query_dwarf_func): Likewise.
	(query_cu): Pass empty func, file, line, for address-based
	queries.

2005-08-29  Frank Ch. Eigler  <fche@redhat.com>

	* runtest.sh: Tolerate relative $SRCDIR.

2005-08-29  Frank Ch. Eigler  <fche@redhat.com>

	* stapprobes.5.in, stapfuncs.5.in, stapex.5.in: New man pages.
	* stap.1.in: Moved some content out.
	* Makefile.am (man_MANS): Add new man pages.
	* configure.ac (AC_CONFIG_FILES): Add them.
	* systemtap.spec.in: Package them.
	* Makefile.in, configure: Regenerated.
	* buildrun.cxx (run_pass): Pass "-r" to stpd.
	* translate.cxx (emit_common_header): Wrap try/catch around
	variable decls, to improve exception particularity.
	(visit_literal_number): Emit as unsigned literal, which is
	actually a subtle correctness issue.

2005-08-28  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (visit_target): Make target variable exceptions
	more informative.
	(literal_stmt_for_local): Improve bad-type exception message.
	* translate.cxx (emit_module_init): Include probe point in comments.

2005-08-27  Roland McGrath  <roland@redhat.com>

	* loc2c-test.c (print_type): New function.
	(print_vars): Use it.

	* loc2c-test.c (paddr, print_vars): New functions.
	(main): If given no variable name argument, print out variables.

2005-08-26  Graydon Hoare  <graydon@redhat.com>
